--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root" class="bg-slate-600 text-white"></div>
+    <div id="root" class="bg-slate-600 h-screen text-white"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
